# eadkp

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md  TODO.md  TROUBLE.md  build.rs  docker-compose.yml  dockerfile  justfile  shell.sh
.cargo/: config.toml
docs/: MEMO.md
docs/GUIDS/: BuildExample.md  Setup.md  Simulator.md
docs/SETUPS/: Setup.md
docs/TECHNICALS/EIF/: EIF1.md  README.md  RGB565.md
docs/TECHNICALS/EIF/assets/schemas/: eif1-format-v2.drawio  eif1-format-v3.drawio
docs/TECHNICALS/EIF/schemas/: eif1-format-v1.drawio
docs/WIKI/: ImageResize.md
examples/: eadkp_example.rs
src/: backlight.rs  battery.rs  builder.rs  color.rs  display.rs  image.rs  input.rs  lib.rs  macro.rs  random.rs  storage.rs  timing.rs  utils.rs
src/libs/: file.c  libC.c  libCpp.cpp
templates/: nraddi.dockerfile
