cargo-features = ["profile-rustflags", "public-dependency"]
[package]
name = "eadkp"
version = "0.10.0"
authors = ["Oignontom8283 <www.github.com/Oignontom8283>"]
edition = "2021"
description = "Rust library for developing applications for NumWorks calculators running Epsilon OS. Provides low-level hardware interaction and high-level abstractions for display, input, battery, storage, and more."
license = "GPL-3.0"
repository = "https://github.com/Oignontom8283/eadkp"
documentation = "https://docs.rs/eadkp"
homepage = "https://github.com/Oignontom8283/eadkp"
readme = "README.md"
keywords = ["numworks", "calculator", "embedded", "epsilon", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]

exclude = [
    "epsilon_simulator/",
    "build/",
    "target/",
    ".git/",
    "docs/"
]

[lib]
path = "src/lib.rs"
bench = false
test = false
crate-type = ["rlib", "cdylib"]
name = "eadkp"

[[example]]
name = "device"
path = "examples/eadkp_example.rs"
test = false
doctest = false
bench = false

[[example]]
name = "simulator"
path = "examples/eadkp_example.rs"
test = false
doctest = false
bench = false
crate-type = ["cdylib"]

[profile.dev]
panic="abort"
strip=true
opt-level= "z"
lto = true
codegen-units = 1

[profile.release]
panic="abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[features]
build-tools = ["dep:image", "dep:cc", "dep:regex"]

[dependencies]
heapless = { version = "0.8.0", public = true }
embedded-alloc = { version = "0.6.0", public = true }
enum-iterator = "2.3.0"
postcard = {version = "1.1.2", features=["alloc"]}
serde = {version = "1.0.219", default-features=false}
image = {version = "0.25.6", optional = true}
cc = {version = "1.2.27", optional = true}
regex = {version = "1.11.1", optional = true}

[build-dependencies]
image = "0.25.6"
cc = "1.2.27"
regex = "1.11.1"
